Added a Dummy Header and Footer

--- a/AccountBuddy/src/main/resources/templates/client/billingPage.html
+++ b/AccountBuddy/src/main/resources/templates/client/billingPage.html
@@ -1,4 +1,5 @@
 <h1>Welcome to The Billing Page</h1>
+<div th:replace="~{fragments/header :: header}"></div>
 <form>
 
 	<input type="text" placeholder="78543987543897798"><button name="searchBtn">Search</button>
@@ -58,3 +59,4 @@
 
 	</table>
 </form>
+<div th:replace="~{fragments/footer :: commonFooter}"></div>
