--- a/AccountBuddy/src/main/resources/templates/fragments/footer.html
+++ b/AccountBuddy/src/main/resources/templates/fragments/footer.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-	<head>
-		<title>Footer</title>
-	</head>
+<head>
+    <title>Footer</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+</head>
 <body>
-	<div th:fragment="commonFooter">
-		<hr />
-		<h1>Footer Part</h1>
-	</div>
+    <div th:fragment="commonFooter" class="bg-dark text-white text-center p-3 mt-4">
+        <p class="mb-0">&copy; 2025 Retail Billing System. All Rights Reserved.</p>
+        <p class="mb-0">Developed by Piyush Dolai</p>
+    </div>
 </body>
 </html>
