--- a/AccountBuddy/src/main/resources/templates/fragments/header.html
+++ b/AccountBuddy/src/main/resources/templates/fragments/header.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-	<head>
-		<title>Header</title>
-	</head>
+<head>
+    <title>Header</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+</head>
 <body>
-	<div th:fragment="header">
-		<h1>Header Part</h1>
-		<hr/>
-	</div>
+    <div th:fragment="header" class="bg-primary text-white p-3 d-flex justify-content-between align-items-center">
+        <div class="d-flex align-items-center">
+            <img src="/images/logo.png" alt="Company Logo" class="me-3" style="height: 50px;">
+            <h2 class="mb-0">Retail Billing System</h2>
+        </div>
+        <nav>
+            <ul class="nav">
+                <li class="nav-item"><a class="nav-link text-white" href="/dashboard">Dashboard</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="/addProducts">Add Products</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="/sales">Sales</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="/reports">Reports</a></li>
+            </ul>
+        </nav>
+        <div>
+            <button class="btn btn-light">Logout</button>
+        </div>
+    </div>
 </body>
 </html>
